--- a/yoco-payment-gateway/assets/styles/admin.css
+++ b/yoco-payment-gateway/assets/styles/admin.css
@@ -1,5 +1,7 @@
 .yoco-woocommerce-settings-error {
   color: red;
+  display: block;
+  margin-block-start: 0.375rem;
 }
 
 .woocommerce table.form-table fieldset {
